<resources>
    <string name="app_name">MiFeed</string>
    <string name="incioSesion">Inicia Sesión</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="Reg">Ir a registro</string>
    <string name="toRegistro">Registrarme</string>
    <string name="toLogin">Iniciar sesión</string>
    <string name="bienvenida">¡Bienvenido!</string>
    <string name="registrate">Registro</string>
    <string name="accionReg">Registrarme</string>
    <string name="cerrarApp">¿Seguro que quieres salir de la aplicación?</string>
    <string name="aceptarCierre">Cerrar</string>
    <string name="olvido">Olvidé mi contraseña</string>
    <string name="cambio">Cambiar tu contraseña</string>
    <string name="confirmacioCambio">Te hemos mandado un correo con ayuda</string>
    <string name="logoutText">Cerrar sesión</string>
    <string name="nombreUsr">Nombre usuario</string>
    <string name="RegCorrecto">Registrado correctamente</string>
    <string name="editNombre">Modificar nombre</string>
    <string name="editCorreo">Modificar correo</string>
    <string name="editPass">Modificar contraseña</string>
    <string name="txtEditPrensa">Modifica temas y medios</string>
    <string name="txtImportantes">Mantente al día</string>
    <string name="txtEditDatos">Realizar modificación</string>
    <string name="txtDeporte">Deporte</string>
    <string name="txtNegocios">Negocios</string>
    <string name="txtOcio">Ocio (cine/tv…)</string>
    <string name="txtCiencia">Ciencia</string>
    <string name="txtMedicina">Salud</string>
    <string name="txtTecnologia">Tecnologia</string>
    <string name="txtTemas">Temas</string>
    <string name="txtAceptar">Aceptar</string>
    <string name="txtSeleccionMedios">Selecciona al menos un medio</string>
    <string name="txtFavs">Favoritos</string>
    <string name="txtCat">Categorías</string>
    <string name="txtImp">Importantes</string>
    <string name="txtEtiq">Etiquetas</string>
    <string name="txtNombreWeb">Nombre para asignar a la web</string>
    <string name="txtPodcast">Podcast</string>
    <string name="txtPrensa">Prensa</string>
    <string name="txtSeleccionCat">Selecciona una categoría</string>
    <string name="txtAjustes">Ajustes</string>
    <string name="txtBusqueda">Buscar</string>
    <string name="txtBiblioteca">Biblioteca</string>
    <string name="txtMasTarde">Más tarde</string>
    <string name="txtRecordatorios">Recordatorios</string>
    <string name="medios">Tus medios</string>
    <string name="temas">Tus temas</string>
    <string name="txtTusEtiquetas">Elige o crea una etiqueta</string>
    <string name="txtTituloEtiqueta">Introduce el titulo de la etiqueta</string>
    <string name="txtTituloArticulos">Los articulos en tu etiqueta</string>
    <string name="txtEliminarHistorial">Eliminar historial</string>
    <string name="txtShare">Compartido desde MiFeed</string>
    <string name="txtAddPodcast">Podcast añadido</string>
    <string name="txtAddBiblioteca">Añadir a la biblioteca</string>
    <string name="txtTituloBiblioteca">Tu bliblioteca de podcast</string>
    <string name="txtDescarga">El episodio se guardará en tu carpeta de descargas</string>
    <string name="txtRecordatorioSinConexion">No hay conexión, por tanto el recordatorio no se ha podido guardar en el servidor</string>
    <string name="horaRecordatorio">Hora del recordatorio</string>
    <string name="cuentaBorrada">Tu cuenta ha sido borrada correctamente</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="BorradoPodcast">Borrado de podcast</string>
    <string name="salvarNube">Salvar historial en la nube</string>
    <string name="idiomaAplicacion">Idioma de la app</string>
    <string name="confirmaCont">Confirma la contraseña</string>
    <string name="eliminacionEtiqueta">Etiqueta eliminada correctamente</string>
    <string name="eliminacionHistorial">Web eliminada con exito</string>
    <string name="modificacionCuenta">Tus datos han sido modificados exitosamente</string>
    <string name="modificacionPass">Contraseña modificada con exito</string>
    <string name="episodioEliminado">Capítulo eliminado de tu lista</string>
    <string name="modificacionEmail">Se ha modificado el correo exitosamente</string>
    <string name="modificacionNombre">Se ha modificado el nombre con exito</string>
    <string name="CorrectConn">Conexión establecida correctamente</string>
    <string name="confirmacionCorreo">Te hemos envíado un correo para que verifiques tu cuenta</string>
    <string name="alertCorreo">Tienes que verificar tu cuenta para poder iniciar sesión, revisa tu spam si no lo encuentras</string>
    <string name="volverMandar">Volver a mandar email</string>
    <string name="entendido">Entendido</string>
    <string name="atras">Volver</string>
    <string name="Historial">Historial</string>
    <string name="txtHistorial">Historial eliminado correctamente</string>
    <string name="txtDeletePodcast">Podcast eliminado correctamente</string>
    <string name="descripcionLogin">Botón para iniciar sesión</string>
    <string name="descripcionRegistro">Botón para ejecutar el registro</string>
    <string name="descripcionDecoracion">Decoración aplicación</string>
    <string name="descripcionInputNombre">Nombre de usuario</string>
    <string name="descripcionInputEmail">Email de tu cuenta</string>
    <string name="descripcionInputPass">Escribe tu contraseña</string>
    <string name="descripcionInputPass2">Repetir contraseña</string>
    <string name="descripcionImgMedio">Logotipo periodico</string>
    <string name="errRecordatoriosActivos">No tienes activados los recodatorios en ajustes, puedes cambiarlo en las opciones de usuario</string>
    <string name="errEliminacionHistorial">No se pudo eliminar la etiqueta</string>
    <string name="errEliminacionEtiqueta">Error al eliminar la etiqueta</string>
    <string name="errEtiquetaNoEncontrada">Error al buscar la etiqueta</string>
    <string name="errSinHistorial">No se ha encontrado ningún historial</string>
    <string name="btnBorrarCuenta">Borrar cuenta</string>
    <string name="errSesion">Ha ocurido un error con tu sesión, vuelve a iniciarla</string>
    <string name="errAddPodcast">Error al salvar el podcast</string>
    <string name="errCargaBiblioteca">No se han encontrado Podcast en tu biblioteca</string>
    <string name="errArticulos">No se encontraron articulos en tu etiqueta</string>
    <string name="recordatorioAñadido">Recordatorio añadido correctamente</string>
    <string name="recordatorioTitulo">MiFeed te recuerda, tienes podcast pendientes </string>
    <string name="recordatorioCuerpo">Tienes episodios pendientes, pulsa aquí para ver cuales son</string>
    <string name="recordatorioEstablecido">Recordatorio añadido correctamente</string>
    <string name="añadido">Recordatorio para el: %1$s a las %2$s</string>
    <string name="errModificacionCorreo">Debes volver a iniciar sesión</string>
    <string name="errModifPass">La contraseña no se ha podido modificar</string>
    <string name="errModificacionEmail">Error al modificar el email</string>
    <string name="errModifNombre">Error al modificar el nombre</string>
    <string name="errSeleccionTemas">No has seleccionado ninguna opción</string>
    <string name="errEtiquetas">No se han encontrado etiquetas</string>
    <string name="errHistorialerrHistorial">Tu historial no ha podido actualizarse</string>
    <string name="errNombreArticulo">Debes introducir un nombre al articulo</string>
    <string name="errBusqueda">No se han encontrado resultados</string>
    <string name="errHistorial">No se ha podido modificar el historial</string>
    <string name="errNombreUsuario">Debes introducir tu nombre</string>
    <string name="errNombreUsuarioNoValido">Solo puedes introducir hasta 15 caracteres, sin especiales</string>
    <string name="errContraseñaVacia">Debes introducir una contraseña para la cuenta</string>
    <string name="errContraseñaNoCoincide">Las contraseña no coinciden</string>
    <string name="errContraseñaDebil">Tu contraseña es demasiado debil</string>
    <string name="errEmailNoValido">El email no es valido</string>
    <string name="errEnvioEmail">No se ha podido mandar el email, tu cuenta no es válida</string>
    <string name="errEmailExistente">El email ya esta asignado a otra cuenta</string>
    <string name="errEmailVacio">Debes introducir un email</string>
    <string name="errLogin">El email o la contraseña introducidos no son validos</string>
    <string name="errContraseña">La contraseña no es correcta</string>
    <string name="errEdicionCuenta">Ha ocurrido un error al modificar tus datos</string>
    <string name="errRegistro">Registro fallido</string>
    <string name="errConn">No tienes conexión, asi que no podrás logearte o registrarte</string>
    <string name="errNoticias">No se  han podido encontrar noticias</string>
    <string name="errRecuperacion">Ha ocurrido un error al recuperar tu sesión</string>
    <string name="errModificarDatos">No has introducido datos o no son correctos</string>
    <string name="errPodcastYaExiste">El podcast ya está en tu lista</string>
    <string name="errTituloEtiquetaVacia">Debes ponerle un titulo a la etiqueta</string>
    <string name="errRecordatorios">No tienes recordatorios en lista</string>
    <string name="contentBtnFavoritos">Modificar favoritos</string>
    <string name="contentListaMedios">Lista medios</string>
    <string name="contentListaTemas">Lista temas</string>
    <string name="contentDescripcionPodcast">Descripción Podcast</string>
    <string name="contentImagenPodcast">Logo podcast</string>
    <string name="contentBtnAddBiblio">Añadir Podcast a biblioteca</string>
    <string name="contentListaEtiquetas">Lista etiquetas del usuario</string>
    <string name="contentInputNombre">Introduce nuevo nombre usuario</string>
    <string name="contentInputCorreo">Introduce nuevo correo</string>
    <string name="contentInputContrasenha">Introduce nueva contraseña</string>
    <string name="contentInputNotificacionesActivas">Activar notificaciones</string>
    <string name="contentInputGuardarHistorial">Activar el guardado de historial</string>
    <string name="contentVolver">Volver a pestaña anterior</string>
    <string name="contentCerrarSesion">Cerrar sesión</string>
    <string name="contentBorrarHistorial">Borrar historial usuario</string>
    <string name="contentLogotipo">Logotipo aplicación</string>
    <string name="contentInicioSesion">Iniciar sesión</string>
    <string name="contentRegistro">Registrar usuario</string>
    <string name="contentAddNoticiaEtiqueta">Añadir noticia a una etiqueta</string>
    <string name="contentCompartir">Compartir noticia en otra aplicación</string>
    <string name="contentToNoticias">Desplazamiento a noticias</string>
    <string name="contentToPodcast">Desplazamiento a podcast</string>
    <string name="contentToConfiguracion">Desplazamiento a configuración de usuario</string>
    <string name="contentModificacionContrasenha">Modificar contraseña</string>
    <string name="contentSeleccionMedios">Lista de medios seleccionables</string>
    <string name="contentArticulo">Artículo  de la lista</string>
    <string name="contentEliminarArticulo">Eliminar Artículo  de la lista</string>
    <string name="contentDireccionArticulo">"Enlace al Artículo "</string>
    <string name="contentTituloMeido">Nombre medio</string>
    <string name="contentEnlaceMedio">Url medio</string>
    <string name="contentSelector">Selector medio</string>
    <string name="contentBusqueda">Barra búsqueda  podcast</string>
    <string name="contentIdioma">Selector idioma</string>
    <string name="contentResultadoLista">Lista de podcast resultado</string>
    <string name="contentAccionBuscar">Botón ejecución busqueda</string>
</resources>