<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbackground"
    tools:context=".controlador.activities.Activities.Podcast.FragmentsPodcast.BusquedaFragment" >

    <EditText
        android:id="@+id/valorBusqueda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/busqueda"
        android:contentDescription="@string/contentBusqueda"
        android:ems="10"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaEpisodios"
        android:layout_width="370dp"
        android:layout_height="452dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/contentResultadoLista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idioma" />

    <TextView
        android:id="@+id/errBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errBusqueda"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/listaEpisodios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listaEpisodios" />

    <ProgressBar
        android:id="@+id/cargaBusqueda"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valorBusqueda" />

    <ImageView
        android:id="@+id/btnBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/contentAccionBuscar"
        android:src="@drawable/btn_busqueda"
        app:layout_constraintBottom_toBottomOf="@+id/valorBusqueda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/valorBusqueda" />

    <Spinner
        android:id="@+id/idioma"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/contentIdioma"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valorBusqueda" />

</androidx.constraintlayout.widget.ConstraintLayout>