<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC4949"
    tools:context="com.tfg.mifeed.view.registroActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descripcionDecoracion"
                app:srcCompat="@drawable/top_wave1"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:gravity="center_horizontal"
                android:text="@string/registrate"
                android:textColor="#ffff"
                android:textSize="60sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_fondo"
                android:drawableStart="@drawable/user_material"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/errUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/errNombreUsuario"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edittext_fondo"
                android:drawableStart="@drawable/email_material"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/errEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/errEmailNoValido"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/contrasenha1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="password"
                android:background="@drawable/edittext_fondo"
                android:drawableStart="@drawable/passwd_material"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/contrasenha2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="password"
                android:background="@drawable/edittext_fondo"
                android:drawableStart="@drawable/passwd_material"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/errPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/errContraseñaDebil"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/accionRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/descripcionRegistro"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/atras" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accionReg"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView4" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/accionInicio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/descripcionLogin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/aceptar" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incioSesion"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                        app:layout_constraintEnd_toEndOf="@+id/imageView5"
                        app:layout_constraintStart_toStartOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="@+id/imageView5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>